storage/minio-single-store0/Deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: storage
  name: minio
  labels:
    app: minio

spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: pgsty/minio:RELEASE.2026-04-17T00-00-00Z
          imagePullPolicy: always
          args: ['server', '/data', '--console-address', ':9001']
          ports:
            - name: minio
              containerPort: 9000
          volumeMounts:
            - name: s3-pv-storage
              mountPath: /data
      volumes:
        - name: s3-pv-storage
          persistentVolumeClaim:
            claimName: s3-pvc

###
