storage/minio-single-store0/Gateway-Route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-minio
  namespace: storage
spec:
  gatewayClassName: istio
  addresses:
  infrastructure:
    annotations:
      metallb.io/loadBalancerIPs: 10.16.24.48
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: store0.gxize.local
    name: tls-store0
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
        - group: ""
          kind: Secret
          name: tls-minio
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: console.store0.gxize.local
    name: tls-console-store0
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
        - group: ""
          kind: Secret
          name: tls-minio
      mode: Terminate
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-store0
  namespace: storage
spec:
  hostnames:
  - store0.gxize.local
  parentRefs:
  - name: gw-minio
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: minio
      port: 9000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /

###
